src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>acfValuation_Fee__c</fullName>
        <description>Click Loans</description>
        <label>Valuation Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acf_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acf_Approval_Conditions__c</fullName>
        <description>Click Loans</description>
        <label>Approval Conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>acf_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acf_Loan_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Loan Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acf_Redraw__c</fullName>
        <description>Click Loans</description>
        <formula>acfProduct_LVR__r.acfProduct__r.acfRedraw__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Redraw</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acf_Settlement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Settlement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acf_Status__c</fullName>
        <description>Click Loans</description>
        <label>Status</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Settled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved with pending documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Docs Generated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved and pending settlement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>bizible__AdWords_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Campaign</label>
        <referenceTo>bizible__AdWords_Campaign__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__Ad_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Ad Group</label>
        <referenceTo>bizible__Ad_Group__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__City__c</fullName>
        <label>Bizible City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__Country__c</fullName>
        <label>Bizible Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__Device__c</fullName>
        <label>Bizible Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__Keyword__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Keyword</label>
        <referenceTo>bizible__Keyword__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__LandingPage__c</fullName>
        <description>Bizible Landing Page</description>
        <label>Bizible Landing Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>bizible__Medium__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Medium</label>
        <referenceTo>bizible__Medium__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__ReferrerPage__c</fullName>
        <description>Bizible Referrer Page</description>
        <label>Bizible Referrer Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>bizible__Region__c</fullName>
        <label>Bizible Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible__Search_Phrase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Search Phrase</label>
        <referenceTo>bizible__Search_Phrase__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__Text_Ad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible Ad Content</label>
        <referenceTo>bizible__Text_Ad__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible__WebSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bizible WebSource</label>
        <referenceTo>bizible__WebSource__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>clickJumioFirstName__c</fullName>
        <label>First Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clickJumioLast_Name__c</fullName>
        <label>Last Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clickJumio_Status__c</fullName>
        <label>Jumio Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attempted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>vhc__CallFile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call File</label>
        <referenceTo>vhc__Campaign__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Click_Life_Opps</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>Noble_Url__c</columns>
        <columns>NO_Status__c</columns>
        <columns>NO_Comment__c</columns>
        <columns>NO_Life_Annual_Premium__c</columns>
        <columns>NO_TPD_Annual_Premium__c</columns>
        <columns>NO_Trauma_Annual_Premium__c</columns>
        <columns>NO_IP_Annual_Premium__c</columns>
        <columns>NO_BEX_Annual_Premium__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Click_Life_Opportunity</value>
        </filters>
        <label>Click Life Opps</label>
    </listViews>
    <listViews>
        <fullName>Click_Life_Opps_Inf</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>Noble_Url__c</columns>
        <columns>NO_Status__c</columns>
        <columns>NO_Comment__c</columns>
        <columns>NO_Life_Annual_Premium__c</columns>
        <columns>NO_TPD_Annual_Premium__c</columns>
        <columns>NO_Trauma_Annual_Premium__c</columns>
        <columns>NO_IP_Annual_Premium__c</columns>
        <columns>NO_BEX_Annual_Premium__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Click_Life_Opportunity</value>
        </filters>
        <filters>
            <field>NO_Status__c</field>
            <operation>equals</operation>
            <value>WINF</value>
        </filters>
        <label>Click Life Opps - INF NEEDED</label>
    </listViews>
    <listViews>
        <fullName>Click_Life_Opps_PS</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>Noble_Url__c</columns>
        <columns>NO_Status__c</columns>
        <columns>NO_Comment__c</columns>
        <columns>NO_Life_Annual_Premium__c</columns>
        <columns>NO_TPD_Annual_Premium__c</columns>
        <columns>NO_Trauma_Annual_Premium__c</columns>
        <columns>NO_IP_Annual_Premium__c</columns>
        <columns>NO_BEX_Annual_Premium__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Click_Life_Opportunity</value>
        </filters>
        <filters>
            <field>Noble_Url__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Click Life Opps - Past Sub</label>
    </listViews>
    <listViews>
        <fullName>Click_Opps</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>acfBankdetailStatus__c</columns>
        <columns>clickJumio_Status__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Click_Refi</value>
        </filters>
        <label>Click Opps</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <listViews>
        <fullName>X1_CL_In_Progress</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Future_Followed_Date__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Click_Refi</value>
        </filters>
        <filters>
            <field>acf_Status__c</field>
            <operation>equals</operation>
            <value>Application</value>
        </filters>
        <label>1 CL - In Progress</label>
    </listViews>
    <listViews>
        <fullName>X2_CL_Submitted_Opportunites</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Click_Refi</value>
        </filters>
        <filters>
            <field>acf_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>2 CL - Submitted Opps</label>
    </listViews>
    <listViews>
        <fullName>X3_CL_Conditionally_Approved_Opportunites</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Click_Refi</value>
        </filters>
        <filters>
            <field>acf_Status__c</field>
            <operation>equals</operation>
            <value>Conditionally Approved</value>
        </filters>
        <label>3 CL - Conditionally Approved Opps</label>
    </listViews>
    <listViews>
        <fullName>X4_CL_Formally_Approved_Opportunites</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Click_Refi</value>
        </filters>
        <filters>
            <field>acf_Status__c</field>
            <operation>equals</operation>
            <value>Formally Approved</value>
        </filters>
        <label>4 CL - Formally Approved Opps</label>
    </listViews>
    <listViews>
        <fullName>X5_CL_Settled_Opportunites</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Click_Refi</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Settled</value>
        </filters>
        <label>5 CL - Settled Opportunites</label>
    </listViews>
    <recordTypes>
        <fullName>Car_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Opportunity Process Car</businessProcess>
        <description>Car Opportunity Record Type</description>
        <label>Car Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Click_Life_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Opportunity Process Click Life</businessProcess>
        <description>Click Life Opportunity</description>
        <label>Click Life Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Click_Refi</fullName>
        <active>true</active>
        <businessProcess>Opportunity Process ClickLoans</businessProcess>
        <description>Record type for click loans</description>
        <label>Click Refi</label>
    </recordTypes>
    <recordTypes>
        <fullName>Home_Locked_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Opportunity Process Home</businessProcess>
        <label>Home Locked Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Home_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Opportunity Process Home</businessProcess>
        <description>Record Type for Home Opportunities</description>
        <label>Home Opportunity</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Approval_Condition_Text_box</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(acf_Status__c , &apos;Approval&apos;), OR(ISBLANK(TEXT(acfConditions_of_Approval__c)), ISBLANK(acf_Approval_Conditions__c)))</errorConditionFormula>
        <errorDisplayField>acf_Approval_Conditions__c</errorDisplayField>
        <errorMessage>Please fill Approval conditions</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Chk_if_manager_approved_out_of_bus_rules</fullName>
        <active>false</active>
        <errorConditionFormula>AND(RecordType.Name = &quot;Home Opportunity&quot;, Outside_of_Business_Rules__c = &quot;Outside of Business Rules&quot;, Manager_Approved__c = FALSE,  Post_conversion_opp__c = &quot;Post Conversion&quot;)</errorConditionFormula>
        <errorMessage>Your deal is Outside of Business Rules. Please seek approval from your manager through @chatter and then tick the &quot;Manager Approved&quot; checkbox to proceed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Lost_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(Closed_Lost_Reason__c), TEXT(StageName) = &quot;Closed Lost&quot;)</errorConditionFormula>
        <errorMessage>You must select a valid Closed Lost Reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Conditional_Approval</fullName>
        <active>true</active>
        <description>If opportunity status is Conditionally approved then Conditions of approval is mandatory</description>
        <errorConditionFormula>AND(ISPICKVAL(acf_Status__c , &apos;Approval&apos;), ISBLANK(TEXT(acfConditions_of_Approval__c)))</errorConditionFormula>
        <errorDisplayField>acfConditions_of_Approval__c</errorDisplayField>
        <errorMessage>Please fill approval conditions</errorMessage>
    </validationRules>
</CustomObject>